fix(core-css-reset): make default letter spacing -0.8px

--- a/packages/css-reset/_global.scss
+++ b/packages/css-reset/_global.scss
@@ -13,6 +13,7 @@
   text-rendering: optimizeLegibility;
 
   font: inherit;
+  letter-spacing: -0.8px;
 
   &::before,
   &::after {
